fixed padding and overflow issue on parent div

--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,27 @@
 
 @layer base {
 
-     .cstm-paged{
+     .cstm-paged {
+          /* 60px is top-navbar's height */
+          height: calc(100vh - 60px);
           display: flex;
+          align-items: flex-start;
           justify-content: center;
-          align-items: center;
-          padding: 30px 0;
+          overflow-y: scroll;
+          padding: 25px 0;
+     }
+
+     /* Hide scrollbar for Chrome, Safari and Opera */
+     *::-webkit-scrollbar {
+          display: none;
+     }
+
+     /* Hide scrollbar for IE, Edge and Firefox */
+     * {
+          -ms-overflow-style: none;
+          /* IE and Edge */
+          scrollbar-width: none;
+          /* Firefox */
      }
 
      /* for testing elements with border */
